[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "webutils"
version = "0.1.0"
description = "A collection of utilities for HTTP requests, URL building, and authorization"
readme = "README.md"
authors = [
  { name = "Louis Goodnews", email = "louisgoodnews95@gmail.com" }
]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "aiohttp >= 3.8.1"
]
